source/raylib.pas


{Load music stream from file}
function LoadMusicStream(fileName: PChar): TMusic; cdecl; external cDllName;
{Load music stream from data}
function LoadMusicStreamFromMemory(fileType: PChar; const data: Pointer; dataSize: Integer): TMusic; cdecl; external cDllName;
{Unload music stream}
procedure UnloadMusicStream(music: TMusic); cdecl; external cDllName;
{Start music playing}
procedure PlayMusicStream(music: TMusic); cdecl; external cDllName;
{Check if music is playing}
function IsMusicStreamPlaying(music: TMusic): Boolean; cdecl; external cDllName;
{Updates buffers for music streaming}
procedure UpdateMusicStream(music: TMusic); cdecl; external cDllName;
{Stop music playing}
procedure StopMusicStream(music: TMusic); cdecl; external cDllName;
{Pause music playing}
procedure PauseMusicStream(music: TMusic); cdecl; external cDllName;
{Resume playing paused music}
procedure ResumeMusicStream(music: TMusic); cdecl; external cDllName;
{Seek music to a position (in seconds)}
procedure SeekMusicStream(music: TMusic; position: Single); cdecl; external cDllName;
{Set volume for music (1.0 is max level)}
procedure SetMusicVolume(music: TMusic; volume: Single); cdecl; external cDllName;
{Set pitch for a music (1.0 is base level)}
procedure SetMusicPitch(music: TMusic; pitch: Single); cdecl; external cDllName;
{Set pan for a music (0.5 = center)}
procedure SetMusicPan(music: TMusic; pan: Single); cdecl; external cDllName;
{Get music time length (in seconds)}
function GetMusicTimeLength(music: TMusic): Single; cdecl; external cDllName;
{Get current music time played (in seconds)}
function GetMusicTimePlayed(music: TMusic): Single; cdecl; external cDllName;


(* AudioStream management functions *)

{Load audio stream (to stream raw audio pcm data)}
function LoadAudioStream(sampleRate, sampleSize, channels: LongWord): TAudioStream; cdecl; external cDllName;
{Unload audio stream and free memory}
procedure UnloadAudioStream(stream: TAudioStream); cdecl; external cDllName;
{Update audio stream buffers with data}
procedure UpdateAudioStream(stream: TAudioStream; data: Pointer; frameCount: Integer); cdecl; external cDllName;
{Check if any audio stream buffers requires refill}
function IsAudioStreamProcessed(stream: TAudioStream): Boolean; cdecl; external cDllName;
{Play audio stream}
procedure PlayAudioStream(stream: TAudioStream); cdecl; external cDllName;
{Pause audio stream}
procedure PauseAudioStream(stream: TAudioStream); cdecl; external cDllName;
{Resume audio stream}
procedure ResumeAudioStream(stream: TAudioStream); cdecl; external cDllName;
{Check if audio stream is playing}
function IsAudioStreamPlaying(stream: TAudioStream): Boolean; cdecl; external cDllName;
{Stop audio stream}
procedure StopAudioStream(stream: TAudioStream); cdecl; external cDllName;
{Set volume for audio stream (1.0 is max level)}
procedure SetAudioStreamVolume(stream: TAudioStream; volume: Single); cdecl; external cDllName;
{Set pitch for audio stream (1.0 is base level)}
procedure SetAudioStreamPitch(stream: TAudioStream; pitch: Single); cdecl; external cDllName;
{Set pan for audio stream (0.5 is centered)}
procedure SetAudioStreamPan(stream: TAudioStream; pan: Single); cdecl; external cDllName;
{Default size for new audio streams}
procedure SetAudioStreamBufferSizeDefault(size: Integer); cdecl; external cDllName;
{Audio thread callback to request new data}
procedure SetAudioStreamCallback(stream: TAudioStream; callback: TAudioCallback); cdecl; external cDllName;

{Attach audio stream processor to stream}
procedure AttachAudioStreamProcessor(stream: TAudioStream; processor: TAudioCallback); cdecl; external cDllName;
{Detach audio stream processor from stream}
procedure DetachAudioStreamProcessor(stream: TAudioStream; processor: TAudioCallback); cdecl; external cDllName;


(* Custom Misc Functions to help simplify a few things *)

function Vector2Create(aX: Single; aY: Single): TVector2;
procedure Vector2Set(aVec: PVector2; aX: Single; aY: Single);
function Vector3Create(aX: Single; aY: Single; aZ: Single): TVector3;
procedure Vector3Set(aVec: PVector3; aX: Single; aY: Single; aZ: Single);
function ColorCreate(aR: Byte; aG: Byte; aB: Byte; aA: Byte): TColorB;
procedure ColorSet(aColor: PColorB; aR: Byte; aG: Byte; aB: Byte; aA: Byte);

function RectangleCreate(aX: Single; aY: Single; aWidth: Single; aHeight: Single): TRectangle;
procedure RectangleSet(aRect: PRectangle; aX: Single; aY: Single; aWidth: Single; aHeight: Single);
function Camera3DCreate(aPosition, aTarget, aUp: TVector3; aFOVY: Single; aType: Integer): TCamera3D;
procedure Camera3DSet(aCam: PCamera3D; aPosition, aTarget, aUp: TVector3; aFOVY: Single; aType: Integer);

implementation


function Vector2Create(aX: single; aY: single): TVector2;
begin
  Result.x := aX;
  Result.y := aY;
end;

procedure Vector2Set(aVec: PVector2; aX: single; aY: single);
begin
  aVec^.x := aX;
  aVec^.y := aY;
end;

function Vector3Create(aX: single; aY: single; aZ: single): TVector3;
begin
  Result.x := aX;
  Result.y := aY;
  Result.z := aZ;
end;

procedure Vector3Set(aVec: PVector3; aX: single; aY: single; aZ: single);
begin
  aVec^.x := aX;
  aVec^.y := aY;
  aVec^.z := aZ;
end;

function ColorCreate(aR: byte; aG: byte; aB: byte; aA: byte): TColorB;
begin
  Result.r := aR;
  Result.g := aG;
  Result.b := aB;
  Result.a := aA;
end;

procedure ColorSet(aColor: PColorB; aR: byte; aG: byte; aB: byte; aA: byte);
begin
  aColor^.r := aR;
  aColor^.g := aG;
  aColor^.b := aB;
  aColor^.a := aA;
end;

function RectangleCreate(aX: Single; aY: Single; aWidth: Single; aHeight: Single): TRectangle;
begin
  Result.x := aX;
  Result.y := aY;
  Result.Width := aWidth;
  Result.Height := aHeight;
end;

procedure RectangleSet(aRect: PRectangle; aX: Single; aY: Single; aWidth: Single; aHeight: Single);
begin
  aRect^.x := aX;
  aRect^.y := aY;
  aRect^.Width := aWidth;
  aRect^.Height := aHeight;
end;

function Camera3DCreate(aPosition, aTarget, aUp: TVector3; aFOVY: single; aType: integer): TCamera3D;
begin
  Result.position := aPosition;
  Result.target := aTarget;
  Result.up := aUp;
  Result.fovy := aFOVY;
  Result.projection := aType;
end;

procedure Camera3DSet(aCam: PCamera3D; aPosition, aTarget, aUp: TVector3; aFOVY: single; aType: integer);
begin
  aCam^.position := aPosition;
  aCam^.target := aTarget;
  aCam^.up := aUp;
  aCam^.fovy := aFOVY;
  aCam^.projection := aType;
end;


initialization

end.

